Seccion de inicio de la pagina

--- a/index.html
+++ b/index.html
@@ -4,17 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OVI INTRODUCCION A INGENIERIA DE SISTEMAS</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>INTRODUCCION A LA INGENIERIA DE SISTEMAS</h1>
         <nav>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="lecturas.html">Lecturas</a></li>
-            <li><a href="multimedia.html">Multimedia</a></li>
-            <li><a href="actividades.html">Actividades</a></li>
-            <li><a href="autores.html">Autores</a></li>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="lecturas.html">Lecturas</a></li>
+                <li><a href="multimedia.html">Multimedia</a></li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="autores.html">Autores</a></li>
+            </ul>
         </nav>
     </header>
+
+    <main>
+        <section>
+            <h2>Bienvenido al OVI</h2>
+            <p>Este Objeto Virtual de Información (OVI) está diseñado para introducirte en el mundo de la Ingeniería de Sistemas.</p>
+            <h3>Objetivos del OVI</h3>
+            <ul>
+                <li>Comprender qué es la Ingeniería de Sistemas.</li>
+                <li>Explorar sus aplicaciones en la actualidad.</li>
+                <li>Conocer herramientas y metodologías utilizadas.</li>
+            </ul>
+            <h3>Importancia del tema</h3>
+            <p>La Ingeniería de Sistemas es clave en el desarrollo tecnológico y la optimización de procesos en múltiples industrias.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 OVI - Ingeniería de Sistemas</p>
+    </footer>
 </body>
 </html>
