creacion de las diferentes paginas que conformaran la seccion de lecturas

--- a/lecturas.html
+++ b/lecturas.html
@@ -8,6 +8,37 @@
 <body>
     <header>
         <h1>Lecturas sobre la introduccion a la ingenieria de sistemas</h1>
-        </header>
+            <div class="lectura">
+                <h3>Conceptos de Sistemas</h3>
+                <p>Describiremos la evolución de los sistemas a través de la historia y cómo se integran dentro de las organizaciones.</p>
+                <a href="sistemas.html">Leer más</a>
+            </div>
+            <div class="lectura">
+                <h3>Conceptos de la Computación</h3>
+                <p>Conoceremos la evolución de las computadoras y su relevancia en el desarrollo de los sistemas actuales.</p>
+                <a href="computacion.html">Leer más</a>
+            </div>
+            <div class="lectura">
+                <h3>Conceptos de Hardware</h3>
+                <p>Exploraremos la importancia de los dispositivos de almacenamiento, procesamiento y los elementos de entrada y salida.</p>
+                <a href="hardware.html">Leer más</a>
+            </div>
+            <div class="lectura">
+                <h3>Concepto de Software</h3>
+                <p>Analizaremos los diferentes sistemas operativos, su estructura y su impacto en la sociedad.</p>
+                <a href="sofware.html">Leer más</a>
+            </div>
+            <div class="lectura">
+                <h3>Concepto de Comunicación</h3>
+                <p>Estudiaremos los elementos de una red informática y la importancia de la seguridad en las comunicaciones.</p>
+                <a href="comunicacion.html">Leer más</a>
+            </div>
+            <div class="lectura">
+                <h3>Sistemas de Información</h3>
+                <p>Comprenderemos el análisis de los sistemas de información y la ingeniería de software.</p>
+                <a href="SI.html">Leer más</a>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
