modificacion de el nombre de una pagina para poder llamarla correctamente

--- a/lecturas.html
+++ b/lecturas.html
@@ -26,7 +26,7 @@
             <div class="lectura">
                 <h3>Concepto de Software</h3>
                 <p>Analizaremos los diferentes sistemas operativos, su estructura y su impacto en la sociedad.</p>
-                <a href="sofware.html">Leer más</a>
+                <a href="software.html">Leer más</a>
             </div>
             <div class="lectura">
                 <h3>Concepto de Comunicación</h3>
