eliminacion de un titulo incorrecto

--- a/software.html
+++ b/software.html
@@ -18,7 +18,7 @@
     </header>
 
     <section id= "contenido">
-         <section id= "contenido"><h1>Conceptos de Hardware</h1>
+         <section id= "contenido">
     
             <h2>Sistemas operativos: estructura, tipos e importancia</h2>
             <p>Un sistema operativo es un conjunto de programas esenciales que gestionan los recursos de hardware y proporcionan servicios a las aplicaciones, facilitando la interacción entre el usuario y la computadora. Su estructura básica incluye el núcleo (kernel), que administra las operaciones fundamentales del sistema, y una interfaz de usuario, que puede ser gráfica (GUI) o de línea de comandos (CLI). Existen diversos tipos de sistemas operativos, como los de escritorio (Windows, macOS, Linux), móviles (Android, iOS) y en red, cada uno adaptado a necesidades específicas. La importancia de los sistemas operativos radica en su capacidad para coordinar y dirigir todos los servicios y aplicaciones que utiliza el usuario en una computadora, siendo fundamentales para su funcionamiento eficiente y seguro <strong>(Wikipedia, s.f.)</strong>.</p>
