Agregando informacion a la seccion de autor(es)

--- a/autores.html
+++ b/autores.html
@@ -8,6 +8,22 @@
 <body>
     <header>
         <h1>Autor(es) del OVI</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="lecturas.html">Lecturas</a></li>
+                <li><a href="multimedia.html">Multimedia</a></li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="autores.html">Autores</a></li>
+            </ul>
+        </nav>
     </header>
+
+        <section>
+            <h2> Sobre el Autor</h2>
+            <img src="img/fotoautor.jpg" alt="Foto del Autor" width="150">
+            <p><strong>Nombre:</strong> DAYANA AYALA GOEZ</p>
+            <p><strong>Correo:</strong> dayalagoez72@correo.unicordoba.edu.co</p>
+        </section>
 </body>
 </html>
