--- a/lecturas.html
+++ b/lecturas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lecturas</title>
+    <link rel="stylesheet" href="css/lecturas.css">
 </head>
 <body>
     <header>
