css a lectura sistemas

--- a/sistemas.html
+++ b/sistemas.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONCEPTOS DE SISTEMAS</title>
-
+<link rel="stylesheet" href="css/sistemas.css">
 </head>
 <body>
     <header>
-        <h1>Conceptos de Sistemas</h1>
         <nav>
             <ul>
                 <li><a href="#contenido">Contenido</a></li>
@@ -16,6 +15,7 @@
                 <li><a href="lecturas.html">Regresar</a></li>
             </ul>
         </nav>
+        <h1>Conceptos de Sistemas</h1>
     </header>
 
     <section id="contenido">
@@ -27,6 +27,7 @@
         La implementación de sistemas adecuados en las empresas no solo mejora la eficiencia operativa, sino que también proporciona una ventaja competitiva al permitir una respuesta ágil a las dinámicas del mercado. Al integrar datos y procesos, los sistemas empresariales ofrecen una visión holística de la organización, facilitando la identificación de oportunidades y la mitigación de riesgos <strong>(ERP365, 2022)</strong>. En un entorno empresarial en constante cambio, contar con sistemas robustos y adaptativos es esencial para el éxito y la sostenibilidad a largo plazo.
         </p>
     </section> 
+    <aside><img src="img/evolucionsistemas.jpg" alt="Evolución de los Sistemas"></aside>
 
     <section id="referencias">
         <h3>Referencias</h3>
