css a lectura hardware

--- a/hardware.html
+++ b/hardware.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONCEPTOS DE HARDWARE</title>
-   
+   <link rel="stylesheet" href="css/hardware.css">
 </head>
 <body>
-    <header>
-        <h1>Conceptos de Hardware</h1>
+    <header>   
         <nav>
             <ul>
                 <li><a href="#contenido">Contenido</a></li>
@@ -16,21 +15,24 @@
                 <li><a href="lecturas.html">Regresar</a></li>
             </ul>
         </nav>  
+        <h1>Conceptos de Hardware</h1>
     </header>
+    <div class="container">
+        <section id="contenido">
+            <h3>Importancia de los dispositivos de almacenamiento</h3>
+            <p>El hardware de una computadora está compuesto por diversos dispositivos esenciales que permiten su funcionamiento óptimo. Los dispositivos de almacenamiento, como discos duros (HDD), unidades de estado sólido (SSD) y memorias USB, son fundamentales para guardar y recuperar datos. Estos dispositivos permiten conservar información de manera eficiente, facilitando el acceso y la transferencia de datos según las necesidades del usuario <strong>(Experience Dropbox, s.f.)</strong></p>
 
-    <section id= "contenido">
-        <h3>Importancia de los dispositivos de almacenamiento</h3>
-    <p>El hardware de una computadora está compuesto por diversos dispositivos esenciales que permiten su funcionamiento óptimo. Los dispositivos de almacenamiento, como discos duros (HDD), unidades de estado sólido (SSD) y memorias USB, son fundamentales para guardar y recuperar datos. Estos dispositivos permiten conservar información de manera eficiente, facilitando el acceso y la transferencia de datos según las necesidades del usuario <strong>(Experience Dropbox, s.f.)</strong></p>
+            <h3>Influencia de los dispositivos de entrada y salida</h3>
+            <p>Los dispositivos de entrada y salida son cruciales para la interacción entre el usuario y la computadora. Los dispositivos de entrada, como teclados y ratones, permiten introducir datos y comandos al sistema, mientras que los dispositivos de salida, como monitores e impresoras, presentan la información procesada al usuario. La eficiencia y calidad de estos periféricos influyen directamente en la experiencia del usuario y en la productividad general del sistema <strong>(NinjaOne, s.f.)</strong>.</p>
 
-    <h3>Influencia de los dispositivos de entrada y salida</h3>
-    <p>Los dispositivos de entrada y salida son cruciales para la interacción entre el usuario y la computadora. Los dispositivos de entrada, como teclados y ratones, permiten introducir datos y comandos al sistema, mientras que los dispositivos de salida, como monitores e impresoras, presentan la información procesada al usuario. La eficiencia y calidad de estos periféricos influyen directamente en la experiencia del usuario y en la productividad general del sistema <strong>(NinjaOne, s.f.)</strong>.</p>
+            <h3>Nuevas tendencias tecnológicas en hardware</h3>
+            <p>Las tendencias tecnológicas actuales están transformando el panorama del hardware informático. Avances como la inteligencia artificial, la computación cuántica y la digitalización del mundo físico están convergiendo para redefinir el futuro de la tecnología. Estas innovaciones prometen mejorar la eficiencia, velocidad y capacidad de los sistemas, abriendo nuevas posibilidades en diversos ámbitos de la sociedad <strong>(El País, 2024).</strong></p>
+        </section>
 
-    <h3>Nuevas tendencias tecnológicas en hardware</h3>
-    <p>Las tendencias tecnológicas actuales están transformando el panorama del hardware informático. Avances como la inteligencia artificial, la computación cuántica y la digitalización del mundo físico están convergiendo para redefinir el futuro de la tecnología. Estas innovaciones prometen mejorar la eficiencia, velocidad y capacidad de los sistemas, abriendo nuevas posibilidades en diversos ámbitos de la sociedad <strong>(El País, 2024).</strong></p>
-
-        
-    </section>
-
+        <aside class="sidebar">
+            <img src="img/hardware.png" alt="Hardware">
+        </aside>
+    </div>
 
     <section id="referencias">
         <h3>Referencias</h3>
@@ -43,6 +45,9 @@
         </div>
     </section>
      
+    <footer>
+        <p>&copy; 2025 OVI - Ingeniería de Sistemas</p>
+    </footer>
 
 </body>
 </html>
