css a lectura de software

--- a/software.html
+++ b/software.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONCEPTOS DE SOFTWARE</title>
+    <link rel="stylesheet" href="css/software.css">
 </head>
 <body>
     <header>
-        <h1>Conceptos de Software</h1>
         <nav>
             <ul>
                 <li><a href="#contenido">Contenido</a></li>
@@ -15,8 +15,9 @@
                 <li><a href="lecturas.html">Regresar</a></li>
             </ul>
         </nav>
+        <h1>Conceptos de Software</h1>
     </header>
-
+    <div class="container">
     <section id= "contenido">
          <section id= "contenido">
     
@@ -31,6 +32,10 @@
 
     </section>
 
+    <aside class="sidebar">
+        <img src="img/software.png" alt="software">
+    </aside>
+</div>
 
     <section id="referencias">
         <h3>Referencias</h3>
@@ -43,5 +48,11 @@
         </div>
     </section>
     
+</section>
+
+    <footer>
+        <p>&copy; 2025 OVI - Ingeniería de Sistemas</p>
+    </footer>
+
 </body>
 </html>
