css a lectura de comunicacion

--- a/comunicacion.html
+++ b/comunicacion.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONCEPTOS DE COMUNICACIÓN</title>
+    <link rel="stylesheet" href="css/comunicacion.css">
 </head>
 <body>
     
     <header>
-        <h1>Conceptos de Comunicacion</h1>
         <nav>
             <ul>
                 <li><a href="#contenido">Contenido</a></li>
@@ -16,8 +16,10 @@
                 <li><a href="lecturas.html">Regresar</a></li>
             </ul>
         </nav> 
+        <h1>Conceptos de Comunicacion</h1>
     </header>
 
+    <div class="container">
     <section id = "contenido">
         <!DOCTYPE html>
 <html lang="es">
@@ -62,6 +64,9 @@
     <p>Para alcanzar estos objetivos, se implementan diversos mecanismos de seguridad, como controles de acceso, cifrado de datos, sistemas de detección de intrusos y medidas preventivas contra malware. La ciberseguridad es esencial para proteger la información y garantizar el correcto funcionamiento de los sistemas en el entorno digital actual <strong>(IBM, s.f.)</strong>.</p>
     </section>
 
+    
+</div>
+
     <section id="referencias">
         <h3>Referencias</h3>
         <div class="referencias">
@@ -72,5 +77,9 @@
             <p><cite>Tokio School. (s.f.). Componentes de redes informáticas. <i>Tokio School</i>. de <a href="https://www.tokioschool.com/noticias/componentes-de-redes/" target="_blank">https://www.tokioschool.com/noticias/componentes-de-redes/</a></cite></p>
         </div>
     </section>
+
+    <footer> 
+        <p>&copy; 2025 OVI - Ingeniería de Sistemas</p>
+    </footer>
 </body>
 </html>
