--- a/lecturas.html
+++ b/lecturas.html
@@ -50,5 +50,10 @@
             </div>
         </section>
     </header>
+
+    <footer>
+        <p>&copy; 2025 OVI - Ingeniería de Sistemas</p>
+    </footer>
+    
 </body>
 </html>
