css a lectura de sis. informacion

--- a/SI.html
+++ b/SI.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEMAS DE INFORMACION</title>
+    <link rel="stylesheet" href="css/SI.css">
 </head>
 <body>
     <header>
-        <h1>Sistemas de informacion</h1>
         <nav>
             <ul>
                 <li><a href="#contenido">Contenido</a></li>
@@ -15,8 +15,11 @@
                 <li><a href="lecturas.html">Regresar</a></li>
             </ul>
         </nav>
+
+        <h1>Sistemas de informacion</h1>
     </header>
 
+    <div class="container">
     <section id="contenido">
         <h2>Sistemas de Información</h2>
     
@@ -48,7 +51,13 @@
     <p>La ingeniería de software se centra en el diseño, desarrollo y mantenimiento de sistemas de software de manera sistemática y cuantificable. Su objetivo es producir software de alta calidad que sea eficiente, confiable y fácil de mantener. Para lograrlo, se aplican metodologías y herramientas específicas durante todo el ciclo de vida del software.
     Esta disciplina abarca técnicas modernas como la programación orientada a objetos, el desarrollo basado en componentes y las arquitecturas orientadas a servicios. Estas técnicas subrayan la importancia del software en la sociedad actual, donde desempeña un papel crucial en sectores como la educación, la salud y la economía digital.
     <strong>(Universidad Internacional de La Rioja [UNIR], s.f.).</strong></p>
+
+
+<aside class="sidebar">
+    <img src="img/SI.jpg" alt="SI">
+</aside>
 </section>
+</div>
 
 
 <section id="referencias">
@@ -68,6 +77,9 @@
     </div>
 </section>
 
+<footer>
+    <p>&copy; 2025 OVI - Ingeniería de Sistemas</p>
+</footer>
 
 </body>
 </html>
