css aplicado a la seccion de multimedia

--- a/multimedia.html
+++ b/multimedia.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multimedia</title>
+    <link rel="stylesheet" href="css/multimedia.css">
 </head>
 <body>
     <Header>
-        <h1>VIDEOS Y PODCAST: INGENIERIA DE SISTEMAS</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -17,6 +17,7 @@
                 <li><a href="autores.html">Autores</a></li>
             </ul>
         </nav>
+        <h1>VIDEOS Y PODCAST: INGENIERIA DE SISTEMAS</h1>
     </Header>
 
         <section id="videos">
