aplicando css a la seccion autores

--- a/autores.html
+++ b/autores.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autores</title>
+    <link rel="stylesheet" href="css/autores.css">
 </head>
 <body>
     <header>
-        <h1>Autor(es) del OVI</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -17,6 +17,7 @@
                 <li><a href="autores.html">Autores</a></li>
             </ul>
         </nav>
+        <h1>Autor(es) del OVI</h1>
     </header>
 
         <section>
