aplicando css a inicio

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OVI INTRODUCCION A INGENIERIA DE SISTEMAS</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/inicio.css">
 </head>
 <body>
     <header>
-        <h1>INTRODUCCION A LA INGENIERIA DE SISTEMAS</h1>
         <nav>
-            
+            <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="lecturas.html">Lecturas</a></li>
                 <li><a href="multimedia.html">Multimedia</a></li>
                 <li><a href="actividades.html">Actividades</a></li>
                 <li><a href="autores.html">Autores</a></li>
-           
+            </ul>
         </nav>
+        <h1>INTRODUCCION A LA INGENIERIA DE SISTEMAS</h1>
     </header>
 
     <main>
