añadiendo pie de pagina a la seccion de autor(es)

--- a/autores.html
+++ b/autores.html
@@ -26,5 +26,9 @@
             <p><strong>Nombre:</strong> DAYANA AYALA GOEZ</p>
             <p><strong>Correo:</strong> dayalagoez72@correo.unicordoba.edu.co</p>
         </section>
+
+        <footer>
+            <p>&copy; 2025 OVI - Ingeniería de Sistemas</p>
+        </footer>
 </body>
 </html>
