actualizando informacion del inicio

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li>Conocer herramientas y metodologías utilizadas.</li>
             </ul>
             <h3>Importancia del tema</h3>
-            <p>La Ingeniería de Sistemas es clave en el desarrollo tecnológico y la optimización de procesos en múltiples industrias.</p>
+            <p>La Ingeniería de Sistemas es una disciplina clave en el desarrollo tecnológico y organizacional, pues integra conocimientos de hardware, software y gestión para diseñar soluciones eficientes y adaptables a diversas necesidades. A lo largo de la historia, su evolución ha sido fundamental para la transformación de la sociedad, desde la construcción de grandes estructuras en la antigüedad hasta la automatización y digitalización en la actualidad. En este contexto, la informática ha revolucionado la manera en que operan las organizaciones, optimizando procesos, mejorando la comunicación y facilitando la toma de decisiones. Así, comprender las teorías de hardware y software permite consolidar la visión integral del ingeniero de sistemas como un profesional capaz de innovar y responder a los desafíos del mundo moderno.</p>
         </section>
     </main>
 
