--- a/actividades.html
+++ b/actividades.html
@@ -4,82 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actividades</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #6f89e0;
-            color: white;
-            padding: 15px 0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .question {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-        button {
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        #result {
-            font-weight: bold;
-            margin-top: 20px;
-            font-size: 18px;
-            color: green;
-        }
-        .drag-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .column {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        .draggable {
-            padding: 10px;
-            background-color: #17a2b8;
-            color: white;
-            border-radius: 5px;
-            cursor: grab;
-            text-align: center;
-        }
-        .droppable {
-            padding: 15px;
-            background-color: #ddd;
-            border-radius: 5px;
-            min-height: 40px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
+    <link rel="stylesheet" href="css/actividades.css">
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="lecturas.html">Lecturas</a></li>
+                <li><a href="multimedia.html">Multimedia</a></li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="autores.html">Autores</a></li>
+            </ul>
+        </nav>
         <h1>Actividades interactivas</h1>
     </header>
 
