añadiendole informacion a los pies de pagina

--- a/multimedia.html
+++ b/multimedia.html
@@ -35,6 +35,9 @@
 
         <footer>
             <p>&copy; 2025 OVI - Ingeniería de Sistemas</p>
+            <p>Desarrollado por <strong>Dayana Ayala Goez</strong></p>
+            <p>Contacto: <a href="mailto:dayalagoez72@correo.unicordoba.edu.co">dayalagoez72@correo.unicordoba.edu.co</a></p>
+            <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">Volver arriba</button>    
        </footer>
     </body>
 </html>
